Add add to wishlist and add to cart buttons in product details page

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -7,7 +7,7 @@
     <div class="row" id="row-product">
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <a href="{% url 'product_detail' product.id %}">
-                <img src="{{ MEDIA_URL }}{{product.image.url}}" class="card-img-top imag-fluid"
+                <img src="{{ MEDIA_URL }}{{product.image.url}}" class="card-img-top imag-fluid imag-details"
                     alt="{{ product.friendly_name }}">
                 </a>
         </div>
@@ -15,7 +15,7 @@
         <div class="col-12 col-md-6 col-lg-4 offset-lg-1">
             <div class="product-title">{{ product.friendly_name }}</div>
             <div class="product-desc">{{ product.description }}</div>
-            <div class="product-rating"><i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star-o"></i> </div>
+            <div class="product-rating"><i class="fa fa-star gold"> </i><i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i><i class="fa fa-star gold"></i> <i class="fa fa-star-o"></i> </div>
             <hr>
             <div class="product-price">€{{ product.price }}</div>
             <div class="product-stock">In Stock</div>
