--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -6,10 +6,17 @@
 <div class="container-fluid">
     <div class="row" id="row-product">
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+            {% if product.image %}
             <a href="{% url 'product_detail' product.id %}">
-                <img src="{{ MEDIA_URL }}{{product.image.url}}" class="card-img-top imag-fluid imag-details"
+            <img src="{{ MEDIA_URL }}{{product.image.url}}" class="card-img-top imag-fluid"
+                alt="{{ product.friendly_name }}">
+            </a>
+            {% else %}
+            <a href="{% url 'product_detail' product.id %}">
+                <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top imag-fluid"
                     alt="{{ product.friendly_name }}">
-                </a>
+            </a>
+            {% endif %}
         </div>
 
         <div class="col-12 col-md-6 col-lg-4 offset-lg-1">
