--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,7 @@
       <div class="col-sm-12 col-md-3 d-sm-inline-block form-inline mr-auto ml-md-3 my-2 mw-100">
         <form method="GET" action="{% url 'products' %}" class="d-flex main-form">
           <div class="input-group">
-            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+            <input type="text" class="form-control bg-light border-0 small" name="search" placeholder="Search for..."
               aria-label="Search" aria-describedby="basic-addon2">
             <div class="input-group-append">
               <button class="btn btn-primary" type="submit">
