--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -25,7 +25,15 @@
             <div class="product-rating"><i class="fa fa-star gold"> </i><i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i><i class="fa fa-star gold"></i> <i class="fa fa-star-o"></i> </div>
             <hr>
             <div class="product-price">€{{ product.price }}</div>
-            <div class="product-stock">In Stock</div>
+            {% if product.stock %}
+            <div class="card-body">
+                <h2><span class="badge bg-success">In Stock</span></h2>
+            </div>
+            {% else %}
+            <div class="card-body">
+                <h2><span class="badge bg-danger">Out-of-stock</span></h2>
+            </div>
+            {% endif %}
             <hr>
             <div class="btn-group cart">
                 <button type="button" class="btn-success">
