--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -30,16 +30,17 @@
                             </a>
                             {% endif %}
                             <div class="card-body">
-                                <p class="card-text">{{ product.friendly_name }}</p>
-                                <p class="font-weight-bold">€{{ product.price }}</p>
+                                <p class="card-text">{{ product.friendly_name }}</p>  
+                                <p class="card-text"><i class="fas fa-map-pin"></i> {{ product.origin|capfirst }}</p>  
+                                <p class="font-weight-bold"><span class="badge rounded-pill bg-light text-dark">€{{ product.price }}</span></p>
                             </div>
                             {% if product.stock %}
                             <div class="card-body">
-                                <h2><span class="badge bg-success">In Stock</span></h2>
+                                <h2><span class="badge bg-success"><i class="fas fa-check"></i> In Stock</span></h2>
                             </div>
                             {% else %}
                             <div class="card-body">
-                                <h2><span class="badge bg-danger">Out-of-stock</span></h2>
+                                <h2><span class="badge bg-danger"><i class="fas fa-exclamation-circle"></i> Out-of-stock</span></h2>
                             </div>
                             {% endif %}
                         </div>
