--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -52,7 +52,7 @@
                   href="{% url 'account_reset_password' %}">Forgot Password?</a></small>
             </div>
 
-            <div class="row mb-4 px-3"> <small class="font-weight-bold">Don't have an account? <a
+            <div class="row mb-4 px-3"> <small class="font-weight-bold-login">Don't have an account? <a
                   class="text-danger links" href="{{ signup_url }}">Register</a></small>
             </div>
           </div>
