--- a/templates/base.html
+++ b/templates/base.html
@@ -101,9 +101,15 @@
                 </li>
 
                 <li class="list-inline-item">
-                  <span class="shopping-basket-icon">
+
+                  <span class="shopping-basket-icon"> <span class="badge rounded-pill bg-warning">
                     <i class="fas fa-shopping-basket"></i>
-                  </span>
+                    {% if grand_total %}
+                    ${{ grand_total|floatformat:2 }}
+                    {% else %}
+                    €0.00
+                    {% endif %}
+                  </span></span>
                 </li>
 
 
