--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -8,13 +8,12 @@
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             {% if product.image %}
             <a href="{% url 'product_detail' product.id %}">
-            <img src="{{ MEDIA_URL }}{{product.image.url}}" class="card-img-top imag-fluid"
-                alt="{{ product.friendly_name }}">
+                <img src="{{ MEDIA_URL }}{{product.image.url}}" class="card-img-top imag-fluid"
+                    alt="{{ product.friendly_name }}">
             </a>
             {% else %}
             <a href="{% url 'product_detail' product.id %}">
-                <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top imag-fluid"
-                    alt="{{ product.friendly_name }}">
+                <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top imag-fluid" alt="{{ product.friendly_name }}">
             </a>
             {% endif %}
         </div>
@@ -22,7 +21,8 @@
         <div class="col-12 col-md-6 col-lg-4 offset-lg-1">
             <div class="product-title">{{ product.friendly_name }}</div>
             <div class="product-desc">{{ product.description }}</div>
-            <div class="product-rating"><i class="fa fa-star gold"> </i><i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i><i class="fa fa-star gold"></i> <i class="fa fa-star-o"></i> </div>
+            <div class="product-rating"><i class="fa fa-star gold"> </i><i class="fa fa-star gold"></i> <i
+                    class="fa fa-star gold"></i><i class="fa fa-star gold"></i> <i class="fa fa-star-o"></i> </div>
             <hr>
             <div class="product-price">€{{ product.price }}</div>
             {% if product.stock %}
@@ -37,12 +37,12 @@
             <hr>
             <div class="btn-group cart">
                 <button type="button" class="btn-success">
-                    Add to cart 
+                    Add to cart
                 </button>
             </div>
             <div class="btn-group wishlist">
                 <button type="button" class="btn-danger">
-                    Add to wishlist 
+                    Add to wishlist
                 </button>
             </div>
         </div>
