--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,7 +5,7 @@
 <div class="container-fluid row vertical-alignment">
     <div class="col-lg-12">
         <div class="col main-section-page ">
-            <h1 class="display-4 text-white-uppercase heading">We provide Smart Control Solutions</h1>
+            <h1 class="display-4 text-white-uppercase heading" id="message"></h1>
             <p class="text-white-uppercase">
                 <a class="btn btn-primary btn-main-sections buttons" href="{% url 'products' %}" target="_blank"
                     role="button">Shop now!</a>
@@ -14,3 +14,23 @@
     </div>
 </div>
 {% endblock %}
+
+{% block postloadjs %}
+
+<script type="text/javascript">
+    var showText = function (target, message, index, interval) {
+        if (index < message.length) {
+            $(target).append(message[index++]);
+            setTimeout(function () { showText(target, message, index, interval); }, interval);
+        }
+    }
+
+    $(function () {
+        showText("#message", "We provide Smart Control Solutions!", 0, 100);
+    });
+</script>
+
+{% endblock %}
+
+
+
