--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -6,13 +6,13 @@
 <div class="container-fluid">
 
     <div class="container-fluid">
-        <div class="row">
-           <div class="col-lg-6">
+        <div class="row" id="sorting-row">
+           <div class="col-lg-6  d-flex justify-content-center sorting-column">
                Products: {{ products|length }}
            </div>
-           <div class="col-lg-6">
+           <div class="col-lg-6  d-flex justify-content-center sorting-column">
             <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="btn-sorting btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                   Sort by
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
