Reformat sorting row in products page

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -8,7 +8,7 @@
     <div class="container-fluid">
         <div class="row" id="sorting-row">
            <div class="col-lg-6  d-flex justify-content-center sorting-column">
-               Products: {{ products|length }}
+              <h3 class="nav-item"> {{ products|length }} Products </h3>
            </div>
            <div class="col-lg-6  d-flex justify-content-center sorting-column">
             <div class="dropdown">
