--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -48,8 +48,12 @@
                             {% endif %}
                             <div class="card-body">
                                 <p class="card-text">{{ product.friendly_name }}</p>
+                            {% if product.category %}
                                 <p class="card-text"><i class="fas fa-tags"></i> {{ product.category|capfirst }}</p>
+                            {% endif %}
+                            {% if product.origin %}
                                 <p class="card-text"><i class="fas fa-map-pin"></i> {{ product.origin|capfirst }}</p>
+                            {% endif %}
                                 <p class="font-weight-bold"><span class="badge rounded-pill bg-light text-dark">€{{ product.price }}</span></p>
                             </div>
                             {% if product.stock %}
